@@ -1,5 +1,6 @@
 Changelog for HLint
 
+    Upgrade to haskell-src-exts-1.11.1
     Add a --cross flag, to detect hints between multiple modules
     #428, don't suggest using String in an instance head
 1.8.8
